--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -171,6 +171,12 @@ body{
     justify-content: center;
     gap: 50px;
     margin-top: 50px;
+  }
+    
+    @media screen and (max-width: 767px){
+      .cards-5{
+        flex-wrap: wrap;
+      }
 }
 .product-banners{
   display: flex;
