--- a/oas-env/oas/templates/header.html
+++ b/oas-env/oas/templates/header.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HOME</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel = "stylesheet" type="text/css" href = "{% static 'CSS/owl.carousel.min.css' %}">
     <link rel = "stylesheet" type="text/css" href = "{% static 'CSS/owl.theme.default.min.css' %}"> 
