about page addition

--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -44,7 +44,7 @@
       <div class="container">
         <div class="banner1-content-inner">
           <span>Welcome To Auction House</span>
-          <h2 id="hi"><b>Build, sell &; collect digital items.</b></h2>
+          <h2 id="hi"><b>Build, sell & collect digital items.</b></h2>
           <p>Nulla facilisi. Maecenas ac tellus ut ligula interdum convallis. Nullam
             dapibus on erat in dolor posuere, none hendrerit lectus ornare.
             Suspendisse sit amet turpina sagittis, ultrices dui et, aliquam none hendrerit lectus.</p>
