--- a/oas-env/oas/templates/header.html
+++ b/oas-env/oas/templates/header.html
@@ -9,7 +9,7 @@
     <link rel = "stylesheet" type="text/css" href = "{% static 'CSS/owl.carousel.min.css' %}">
     <link rel = "stylesheet" type="text/css" href = "{% static 'CSS/owl.theme.default.min.css' %}"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="{% static 'CSS/styleapp.css' %}" />
+    <link rel="stylesheet" href="{% static 'CSS/styleapp.css' %}" /> 
 </head>
 <body>
     <div class="top-bar">
@@ -70,10 +70,10 @@
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About us</a>
+              <a class="nav-link" href="about/">About us</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Browse products</a>
