--- a/oas-env/oas/templates/header.html
+++ b/oas-env/oas/templates/header.html
@@ -73,7 +73,7 @@
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about/">About us</a>
+              <a class="nav-link" href="about">About us</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Browse products</a>
@@ -101,6 +101,7 @@
           </ul>
         </div>
       </div>
+      
     </div>
   </nav>
 </div>
