--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'CSS/styleapp.css' %}" />
+    <link rel="stylesheet" href="{% static 'CSS/about.css' %}" />
     
 </head>
 <body>
@@ -25,7 +25,7 @@
         <div class="card">
             <div class="face face1">
                 <div class="content">
-                    <img class="icon" src="facebookw.svg" width="40px">
+                    <img class="icon" src="{% %}" width="40px">
                     <h3>Facebook</h3>
                 </div>
             </div>
