--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -25,7 +25,7 @@
         <div class="card">
             <div class="face face1">
                 <div class="content">
-                    <img class="icon" src="{% static 'img/f2.jpg' %}" width="40px">
+                    <img class="icon" src="{% static 'img/coin1.png' %}" width="40px">
                     <h3>Facebook</h3>
                 </div>
             </div>
