--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -17,60 +17,12 @@
                     About Us                </h2>
                     
             </div><!-- /.inner-banner-content -->
+            <div class="inner-banner-img">
+                <img src="{% static 'img/breadcrumb.png'%}" alt="">
+            </div><!-- /.inner-banner-img -->
         </div><!-- /.container -->
     </div><!-- /.inner-banner -->
 
-
-    <div class="container">
-        <div class="card">
-            <div class="face face1">
-                <div class="content">
-                    <img class="icon" src="{% static 'img/coin1.png' %}" width="40px">
-                    <h3>Facebook</h3>
-                </div>
-            </div>
-            <div class="face face2">
-                <div class="content">
-                    <p>
- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    </p>
-                    <a href="#">Read More</a>
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <div class="face face1">
-                <div class="content">
-                    <img class="icon" src="instagramw.svg" width="40px">
-                    <h3>Instagram</h3>
-                </div>
-            </div>
-            <div class="face face2">
-                <div class="content">
-                    <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    </p>
-                    <a href="#">Read More</a>
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <div class="face face1">
-                <div class="content">
-                    <img class="icon" src="twitterw.svg" width="40px">
-                    <h3>Twitter</h3>
-                </div>
-            </div>
-            <div class="face face2">
-                <div class="content">
-                    <p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    </p>
-                    <a href="#">Read More</a>
-                </div>
-            </div>
-        </div>
-    </div>
 
     
 </body>
