--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -13,8 +13,8 @@
     <div class="inner-banner">
         <div class="container">
             <div class="inner-banner-content">
-                <h2 data-wow-duration="1.5s" data-wow-delay=".2s" style="visibility: visible; animation-duration: 1.5s; animation-delay: 0.2s;">
-                    About Us                </h2>
+                <h2 data-wow-duration="1.5s" data-wow-delay=".2s" style="visibility: visible; animation-duration: 1.5s; animation-delay: 0.2s;"><b>
+                    About Us</b></h2>
                     
             </div><!-- /.inner-banner-content -->
             <div class="inner-banner-img">
