--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -15,11 +15,12 @@
             <div class="inner-banner-content">
                 <h2 data-wow-duration="1.5s" data-wow-delay=".2s" style="visibility: visible; animation-duration: 1.5s; animation-delay: 0.2s;"><b>
                     About Us</b></h2>
-                    
-            </div><!-- /.inner-banner-content -->
+                    <button href="{% url 'home' %}"></button>
+                    </div><!-- /.inner-banner-content -->
             <div class="inner-banner-img">
                 <img src="{% static 'img/breadcrumb.png'%}" alt="">
             </div><!-- /.inner-banner-img -->
+
         </div><!-- /.container -->
     </div><!-- /.inner-banner -->
 
