--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -15,7 +15,7 @@
             <div class="inner-banner-content">
                 <h2 data-wow-duration="1.5s" data-wow-delay=".2s" style="visibility: visible; animation-duration: 1.5s; animation-delay: 0.2s;"><b>
                     About Us</b></h2>
-                    <button href="{% url 'home' %}"></button>
+                    <button href="{% url '/' %}"></button>
                     </div><!-- /.inner-banner-content -->
             <div class="inner-banner-img">
                 <img src="{% static 'img/breadcrumb.png'%}" alt="">
