--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'CSS/about.css' %}" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto+Slab:400,700" />
     
 </head>
 <body>
@@ -23,6 +24,24 @@
         </div><!-- /.container -->
     </div><!-- /.inner-banner -->
 
+    <div class="row row-big-card">
+        <div class="cont">
+            <a href="#" class="card-link">
+                <div class="card-img">
+                    <div style="background-image:url(https://images.unsplash.com/photo-1528873981-36c6afde7b9d);"></div>
+                </div>
+                <div class="card-inner">
+                    <h3>A very big title</h3>
+                    <h4>Some basic subtitle</h4>
+                    <div class="inner-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. ...</p>
+                    </div>
+                    <span class="cta-card">Read on</span>
+                </div>
+            </a>
+            
+        </div>
+    </div>
 
     
 </body>
