--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -28,7 +28,9 @@
         <div class="cont">
             <a href="#" class="card-link">
                 <div class="card-img">
-                    <div style="background-image:url(https://images.unsplash.com/photo-1528873981-36c6afde7b9d);"></div>
+                    <div class="background-image">
+                        <img src="{% static 'img/breadcrumb.png' %}" alt="">
+                    </div>
                 </div>
                 <div class="card-inner">
                     <h3>A very big title</h3>
