--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -29,7 +29,7 @@
             <a href="#" class="card-link">
                 <div class="card-img">
                     <div class="background-image">
-                        <img src="{% static 'img/breadcrumb.png' %}" alt="">
+                        <img src="{% static 'img/about-img.png' %}" alt="">
                     </div>
                 </div>
                 <div class="card-inner">
