--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -29,12 +29,13 @@
             <a href="#" class="card-link">
 
                 <div class="card-inner">
-                    <h3>A very big title</h3>
-                    <h4>Some basic subtitle</h4>
+                    <h3>We Work For Your Increadible Success</h3>
+                    <h4>WHO WE ARE</h4>
                     <div class="inner-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. ...</p>
+                        <p>Auction sites present consumers with a thrilling, competitive way to buy the goods and services they need most.But getting your own auction site up and running has always required learning complex coding languages, or hiring an expensive design firm for thousands of dollars and months of work.
+                        </p>
                     </div>
-                    <span class="cta-card">Read on</span>
+                    <span class="cta-card">More About</span>
                 </div>
 
                 <div class="card-img">
