--- a/oas-env/oas/static/CSS/about.css
+++ b/oas-env/oas/static/CSS/about.css
@@ -285,3 +285,15 @@ a.card-link:hover span.cta-card {
     margin-top: 50px;
 
 }
+
+
+* { margin:0; padding:0; }
+
+html, body { width:100vw; height:100vh; } /* just to be sure these are full screen*/
+
+canvas { 
+   overflow: hidden;
+   width:100vw;
+   height:100vh;
+   background-color:black;
+}
