--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -25,6 +25,7 @@
     </div><!-- /.inner-banner -->
 
     <div class="row row-big-card">
+        <canvas id="test"></canvas>
         <div class="cont">
             <a href="#" class="card-link">
 
@@ -50,5 +51,17 @@
     </div>
 
     
+
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!-- owl carousel -->
+<script src = "{% static 'JAVASCRIPT/owl.carousel.js' %}"></script>
+<script src = "{% static 'JAVASCRIPT/owl.carousel.min.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="{% static 'JAVASCRIPT/theme.js' %}"></script>
 </body>
 </html>
