--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -48,7 +48,12 @@
     </div>
 
 
+    <div class="row">
+        <div class="col-md-4">
+            <div class="container">
+        
 
+    
     <div class="bar">
         <h1>Why <span>Choose us</span></h1>
         <p>Explore on the world's best & largest Bidding marketplace with our beautiful Bidding products. We want to be a part of your smile, success and future growth.</p>
@@ -74,6 +79,8 @@
       </div><!-- /.tabs -->
      </div><!-- /.lower-content-inner -->
    </div><!-- /.container -->
+</div><!-- /.col-md-4 -->
+</div><!-- /.row -->
     
     
 
