--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -66,10 +66,12 @@
            <p>Blood test</p>
         </button>
         <button type="button" class="btn btn-secondary btn-lg" ><img src="{% static 'img/bell1.png' %}" alt="">
-          <p>urology</p>
+            <h1>Creator's Royality</h1>
+          <p>Voluptate aut blanditiis accusantium offic expedita dolorem inventore</p>
         </button>
         <button type="button" class="btn btn-secondary btn-lg"><img src="{% static 'img/bell1.png' %}" alt="">
-        <p>Dental</p>  
+            <h1>Top Calss Product Price</h1>
+        <p>Voluptate aut blanditiis accusantium offic expedita dolorem inventore</p>  
         </button>
         <button type="button" class="btn btn-secondary btn-lg"><img src="{% static 'img/bell1.png' %}" alt="">
         <p>neurology</p>  
