--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -74,10 +74,15 @@
         <p>Voluptate aut blanditiis accusantium offic expedita dolorem inventore</p>  
         </button>
         <button type="button" class="btn btn-secondary btn-lg"><img src="{% static 'img/bell1.png' %}" alt="">
-        <p>neurology</p>  
+            <h1>Support Multiple Currency</h1>
+        <p>Voluptate aut blanditiis accusantium offic expedita dolorem inventore</p>  
         </button>
-        <button type="button" class="btn btn-secondary btn-lg"><img src="{% static 'img/bell1.png' %}" alt="">`
-         <p>cardiology</p></button>
+        <button type="button" class="btn btn-secondary btn-lg"><img src="{% static 'img/bell1.png' %}" alt="">
+            <h1>Show All Bidders History</h1>
+         <p>Voluptate aut blanditiis accusantium offic expedita dolorem inventore</p></button>
+         <button type="button" class="btn btn-secondary btn-lg"><img src="{% static 'img/bell1.png' %}" alt="">
+            <h1>100% Happy Customer</h1>
+         <p>Voluptate aut blanditiis accusantium offic expedita dolorem inventore</p></button>
       </div><!-- /.tabs -->
      </div><!-- /.lower-content-inner -->
    </div><!-- /.container -->
