--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -49,7 +49,7 @@
 
 
     <div class="row">
-        <div class="col-xl-4">
+        <div class="col-xl-4 col-lg-4 col-md-4" >
             <div class="container">
         
 
