--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -48,6 +48,9 @@
     </div>
 
 
+    <div class="integ">
+
+    
     <div class="row">
         <div class="col-xl-4 col-lg-4 col-md-4" >
             <div class="container">
@@ -88,8 +91,8 @@
    </div><!-- /.container -->
 </div><!-- /.col-md-4 -->
 </div><!-- /.row -->
-    
-    
+
+</div><!-- /.integ -->
 
 
 
