--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -49,15 +49,9 @@
 
 
     <div class="integ">
-
-    
-    <div class="row">
-        <div class="col-xl-4 col-lg-4 col-md-4" >
-            <div class="container">
-        
-
-    
-    <div class="bar">
+        <div class="row">
+            <div class="col-xl-4 col-lg-4 col-md-4" >
+                <div class="bar">
         <h1>Why <span>Choose us</span></h1>
         <p>Explore on the world's best & largest Bidding marketplace with our beautiful Bidding products. We want to be a part of your smile, success and future growth.</p>
       </div><!-- /.bar -->
@@ -87,12 +81,11 @@
             <h1>100% Happy Customer</h1>
          <p>Voluptate aut blanditiis accusantium offic expedita dolorem inventore</p></button>
       </div><!-- /.tabs -->
-     </div><!-- /.lower-content-inner -->
-   </div><!-- /.container -->
-</div><!-- /.col-md-4 -->
+   </div><!-- /col-md-4 -->
 </div><!-- /.row -->
-
 </div><!-- /.integ -->
+
+</div>
 
 
 
