--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -57,9 +57,8 @@
       </div><!-- /.bar -->
     
       <div class="tabs">
-
         <button type="button" class="btn btn-primary " id="btn-still"><img src="{% static 'img/bell1.png' %}" alt=""> 
-            <h1>High Quality Products</h1>
+            <h1>Voluptate aut blanditiis accusantium offic expedita dolorem inventore</h1>
            <p>Blood test</p>
         </button>
         <button type="button" class="btn btn-secondary btn-lg" ><img src="{% static 'img/bell1.png' %}" alt="">
