register page add

--- a/oas-env/oas/templates/header.html
+++ b/oas-env/oas/templates/header.html
@@ -125,7 +125,7 @@
       </div>
     <li><a href="#"><i class="bi bi-search"></i></a></li>
     <li><a href="#"><i class="bi bi-heart"></i></a></li>
-    <li><a href="#"><i class="bi bi-person-lines-fill"></i></a></li>
+    <li><a href="{% url 'register' %}"><i class="bi bi-person-lines-fill"></i></a></li>
   </ul>
 
 
