--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -50,35 +50,47 @@
 
     <div class="integ">
         <div class="row">
-            <div class="col-xl-4 col-lg-4 col-md-4" >
                 <div class="bar">
         <h1>Why <span>Choose us</span></h1>
         <p>Explore on the world's best & largest Bidding marketplace with our beautiful Bidding products. We want to be a part of your smile, success and future growth.</p>
       </div><!-- /.bar -->
     
       <div class="tabs">
+        <div class="col-xl-4 col-lg-4 col-md-4" >
         <button type="button" class="btn btn-primary " id="btn-still"><img src="{% static 'img/bell1.png' %}" alt=""> 
             <h1>Voluptate aut blanditiis accusantium offic expedita dolorem inventore</h1>
            <p>Blood test</p>
         </button>
+    </div>
+
+        <div class="col-xl-4 col-lg-4 col-md-4" >
         <button type="button" class="btn btn-secondary btn-lg" ><img src="{% static 'img/bell1.png' %}" alt="">
             <h1>Creator's Royality</h1>
           <p>Voluptate aut blanditiis accusantium offic expedita dolorem inventore</p>
         </button>
+    </div>
+        <div class="col-xl-4 col-lg-4 col-md-4" >
         <button type="button" class="btn btn-secondary btn-lg"><img src="{% static 'img/bell1.png' %}" alt="">
             <h1>Top Calss Product Price</h1>
         <p>Voluptate aut blanditiis accusantium offic expedita dolorem inventore</p>  
         </button>
+    </div>
+
+        <div class="col-xl-4 col-lg-4 col-md-4" >
         <button type="button" class="btn btn-secondary btn-lg"><img src="{% static 'img/bell1.png' %}" alt="">
             <h1>Support Multiple Currency</h1>
         <p>Voluptate aut blanditiis accusantium offic expedita dolorem inventore</p>  
         </button>
+    </div>
+
+        <div class="col-xl-4 col-lg-4 col-md-4" >
         <button type="button" class="btn btn-secondary btn-lg"><img src="{% static 'img/bell1.png' %}" alt="">
             <h1>Show All Bidders History</h1>
          <p>Voluptate aut blanditiis accusantium offic expedita dolorem inventore</p></button>
          <button type="button" class="btn btn-secondary btn-lg"><img src="{% static 'img/bell1.png' %}" alt="">
             <h1>100% Happy Customer</h1>
          <p>Voluptate aut blanditiis accusantium offic expedita dolorem inventore</p></button>
+        </div>
       </div><!-- /.tabs -->
    </div><!-- /col-md-4 -->
 </div><!-- /.row -->
