--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -55,8 +55,9 @@
         <p>Explore on the world's best & largest Bidding marketplace with our beautiful Bidding products. We want to be a part of your smile, success and future growth.</p>
       </div><!-- /.bar -->
     
+      <div class="col-xl-4 col-lg-4 col-md-4" ></div>
       <div class="tabs">
-        <div class="col-xl-4 col-lg-4 col-md-4" >
+        
         <button type="button" class="btn btn-primary " id="btn-still"><img src="{% static 'img/bell1.png' %}" alt=""> 
             <h1>Voluptate aut blanditiis accusantium offic expedita dolorem inventore</h1>
            <p>Blood test</p>
